--- a/notebooks/Add Executable to PDF.ipynb
+++ b/notebooks/Add Executable to PDF.ipynb
@@ -9,39 +9,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "33a8daec",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "656"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0x290"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c9f9e82a",
-   "metadata": {},
-   "source": [
-    "For now it's just a 'hello world' but hopefully I can get an executable with the C64 edition of Psychedelia embedded in the PDF. That way you can both read the PDF and also use it run and play the game like so:\n",
-    "\n",
-    "```bash\n",
-    "./psychedelia_syndrome_exe.pdf\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "6e627f4b",
    "metadata": {},
@@ -99,7 +66,7 @@
    "id": "95bf46dd",
    "metadata": {},
    "source": [
-    "Inject our binary into the final pdf. The first 0x40 bytes are the important bit of the `ape` binary header, then we use some reserved space in the `ape` header to inject our PDF stream object containing the rest of the binary file, and then we write out the rest of the PDF file."
+    "Inject our binary into the final pdf. The first 0x290 bytes are the important bit of the  binary header, then we use some reserved space in the header to inject our PDF stream object containing the rest of the binary file, and then we write out the rest of the PDF file."
    ]
   },
   {
